--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   ],
   "devDependencies": {
     "@truffle/hdwallet-provider": "1.0.21",
+	"@openzeppelin/test-helpers": "0.5.11",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
 	"truffle-plugin-verify": "0.5.8",
+	"jsbi": "^3.1.4",
     "dotenv": "^8.2.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^2.4.1",
